# rust-wasm-test

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
basic/public/: 404.html  index.html
basic/src/: lib.rs  main.rs
server/: Cargo.toml  Dockerfile
server/public/: index.html
server/src/: builder.rs  lib.rs  main.rs  test.rs  test2.rs
wasm-app/: Cargo.toml
wasm-app/src/: lib.rs
